"fixed location alignment"

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ flex-shrink: 0;
 display: flex;
 flex-direction: column;
 justify-content: center;
-margin-top: 3px;
+margin-top: 15px;
 }
 
 .location-text p {
